--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Sulaiman's Family Gathering</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Sulaiman's Family Gathering</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.google.com/specimen/Boldonse" rel="stylesheet">
 </head>
 <body>
     <div class="container">
